// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabled lazyLoading 1`] = `
<Image
  alt="test"
  className=""
  disableLazy={true}
  src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
  srcSet=""
>
  <img
    alt="test"
    className=""
    src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
    srcSet=""
  />
</Image>
`;

exports[`Image test 1`] = `
<Image
  alt="test"
  className=""
  disableLazy={false}
  src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
  srcSet=""
>
  <img
    alt="test"
    className="imageview"
    src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
  />
  <img
    alt="test"
    className="imageview imageview-full is-hidden"
    onLoad={[Function]}
    src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
    srcSet=""
  />
  <noscript>
    <img
      alt="test"
      className=""
      src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
      srcSet=""
    />
  </noscript>
</Image>
`;

exports[`Mocking a loaded iamge 1`] = `
<Image
  alt="test"
  className=""
  disableLazy={false}
  src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
  srcSet=""
>
  <img
    alt="test"
    className="imageview is-hidden"
    src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
  />
  <img
    alt="test"
    className="imageview imageview-full"
    onLoad={[Function]}
    src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
    srcSet=""
  />
  <noscript>
    <img
      alt="test"
      className=""
      src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
      srcSet=""
    />
  </noscript>
</Image>
`;

exports[`Updating an image src 1`] = `
<Image
  alt="test"
  className=""
  disableLazy={false}
  src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
  srcSet=""
>
  <img
    alt="test"
    className="imageview"
    src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
  />
  <img
    alt="test"
    className="imageview imageview-full is-hidden"
    onLoad={[Function]}
    src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
    srcSet=""
  />
  <noscript>
    <img
      alt="test"
      className=""
      src="http://vignette.wikia-dev.us/22b12324-ab36-4266-87c9-452776157205"
      srcSet=""
    />
  </noscript>
</Image>
`;
